content collapse correctur

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,14 +156,14 @@ section {
     overflow: hidden;
     padding: 1em;
     text-align: left;
-    transition-duration: 2s;
+    transition: all 1s ease-out;
     min-height: 80vh;
+    max-height: 160vh;
 }
 
 @media only screen and (min-width: 35em){
     .landing__container {
         max-width: 50em;
-        padding: 4em;
     }
 }
 
